insumos y tratamientos final, cambios en backend
